--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="C:\Users\leo\Pictures\autobaria.png" alt="Gangue do Autobaria">
+        <img class="rodape-imagem" src="autobaria.png" alt="Gangue do Autobaria">
     </footer>
 </body>
 </html>
